# sequencer

./: Cargo.toml  README.md
benches/: divide_and_conquer.rs  sequential_search.rs
src/: builders.rs  divide_and_conquer.rs  lib.rs  main.rs  sequential_search.rs
